crates/mega-evm/tests/satin/snapshots/satin__strategic_stop__stop_refills_the_state_gas_drawn_from_the_reservoir.snap
---
source: crates/mega-evm/tests/satin/strategic_stop.rs
expression: "&by_case([(\"plain\", OutcomeView::new(&plain)),\n(\"kept\", OutcomeView::new(&kept)), (\"stopped\", OutcomeView::new(&stopped)),])"
---
{
  "kept": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0x00000000000000000000000000000000000000c0",
          "topics": [],
          "data": "0x"
        },
        {
          "address": "0x00000000000000000000000000000000000000b0",
          "topics": [],
          "data": "0x"
        },
        {
          "address": "0x00000000000000000000000000000000000000a0",
          "topics": [],
          "data": "0x"
        }
      ]
    },
    "gas": {
      "regular": 222942,
      "state": 931280,
      "history": 67408,
      "history_bytes": 766,
      "reservoir_remaining": 799001312,
      "floor": 15000,
      "gas_used": 1221630
    },
    "result_gas": {
      "total_gas_spent": 1221630,
      "state_gas_spent": 931280,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 799001312
    },
    "usage": {
      "data_size": 766,
      "write_records": 9
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x00000000000000000000000000000000000000a0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x475ee7916ffc8aa5d39b13d8d4b71df18fe2d1d5fa03ac50cd116e663b3f178c",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x00000000000000000000000000000000000000b0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x50779c21480d637482c58cfde3e50a944b336ca7726207ddaafb252d879af41f",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x00000000000000000000000000000000000000c0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xee56286b4db8b398edd8bd3c1d53914c41424ae686ebdaa7ccb454c1a26cb3c0",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x00000000000000000000000000000000000000d0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xf593c0221423c9d0edf18b504a56c2c7f0d255eac750cadf7e74364644502921",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x3",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0x00000000000000000000000000000000000000c0",
          "topics": [],
          "data": "0x"
        },
        {
          "address": "0x00000000000000000000000000000000000000b0",
          "topics": [],
          "data": "0x"
        },
        {
          "address": "0x00000000000000000000000000000000000000a0",
          "topics": [],
          "data": "0x"
        }
      ]
    },
    "gas": {
      "regular": 222942,
      "state": 881280,
      "history": 67408,
      "history_bytes": 766,
      "reservoir_remaining": 799051312,
      "floor": 15000,
      "gas_used": 1171630
    },
    "result_gas": {
      "total_gas_spent": 1171630,
      "state_gas_spent": 881280,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 799051312
    },
    "usage": {
      "data_size": 766,
      "write_records": 9
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x00000000000000000000000000000000000000a0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x475ee7916ffc8aa5d39b13d8d4b71df18fe2d1d5fa03ac50cd116e663b3f178c",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x00000000000000000000000000000000000000b0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x50779c21480d637482c58cfde3e50a944b336ca7726207ddaafb252d879af41f",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x00000000000000000000000000000000000000c0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xee56286b4db8b398edd8bd3c1d53914c41424ae686ebdaa7ccb454c1a26cb3c0",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x00000000000000000000000000000000000000d0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xf593c0221423c9d0edf18b504a56c2c7f0d255eac750cadf7e74364644502921",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x3",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "stopped": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(DataSize, 490)",
      "output": "0x84b90267000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001ea",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 133375,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 799972720,
      "floor": 15000,
      "gas_used": 160655
    },
    "result_gas": {
      "total_gas_spent": 160655,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 799972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "DataSize",
      "limit": 490,
      "used": 510
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
