crates/mega-evm/tests/satin/snapshots/satin__strategic_stop__usage_equal_to_the_limit_does_not_stop.snap
---
source: crates/mega-evm/tests/satin/strategic_stop.rs
expression: "&BTreeMap::from([(\"usage at the limit\", OutcomeView::new(&at_the_limit)),\n(\"usage at the frame budget\", OutcomeView::new(&at_the_budget)),\n(\"one byte over the limit\", OutcomeView::new(&result)),])"
---
{
  "one byte over the limit": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(DataSize, 429)",
      "output": "0x84b90267000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001ad",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 81318,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 108598
    },
    "result_gas": {
      "total_gas_spent": 108598,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "DataSize",
      "limit": 429,
      "used": 430
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "usage at the frame budget": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 81318,
      "state": 293760,
      "history": 37840,
      "history_bytes": 430,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 412918
    },
    "result_gas": {
      "total_gas_spent": 412918,
      "state_gas_spent": 293760,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 430,
      "write_records": 3
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x00000000000000000000000000000000000000a0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xf593c0221423c9d0edf18b504a56c2c7f0d255eac750cadf7e74364644502921",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x3",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "usage at the limit": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 81318,
      "state": 293760,
      "history": 37840,
      "history_bytes": 430,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 412918
    },
    "result_gas": {
      "total_gas_spent": 412918,
      "state_gas_spent": 293760,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 430,
      "write_records": 3
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x00000000000000000000000000000000000000a0": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xf593c0221423c9d0edf18b504a56c2c7f0d255eac750cadf7e74364644502921",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x3",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
